--- a/README
+++ b/README
@@ -18,3 +18,15 @@ Release 1.0.0.
 - ⚙️ Налаштування персоналізації користувача
 
 ---
+
+## 🛠️ Технології
+
+**Frontend:**
+- React
+- TypeScript
+- ...
+
+**Backend:**
+- Node.js + NEST
+- TypeScript
+- MySQL
