--- a/README
+++ b/README
@@ -21,12 +21,12 @@ Release 1.0.0.
 
 ## 🛠️ Технології
 
-**Frontend:**
+Frontend:
 - React
 - TypeScript
 - ...
 
-**Backend:**
+Backend:
 - Node.js + NEST
 - TypeScript
 - MySQL
