--- a/README
+++ b/README
@@ -33,3 +33,25 @@ Backend:
 - ...
 
 ---
+
+## 👥 Команда
+
+Дизайнер:
+- innadarnel@gmail.com
+
+DevOps:
+- anastashap03@gmail.com
+
+Frontend:
+- neyankiess@gmail.com
+- anastashap03@gmail.com
+
+Backend:
+- sstarodubtsev79@gmail.com
+- 
+
+PM:
+- sstarodubtsev79@gmail.com
+
+QA:
+- sstarodubtsev79@gmail.com
