--- a/README
+++ b/README
@@ -34,24 +34,36 @@ Backend:
 
 ---
 
-## 👥 Команда
+## 👥 Над проєктом працювали:
 
-Дизайнер:
-- innadarnel@gmail.com
+Буришева Яна
+- Роль: Фронтенд
+- email: neyankiess@gmail.com
+- LinkendIn:
+- GitHub: https://github.com/nerolli
 
-DevOps:
-- anastashap03@gmail.com
+Інна Дарнель
+- Роль: Дизайнерка
+- email: innadarnel@gmail.com
+- LinkendIn: www.linkedin.com/in/inna-darnel-b1b917311?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+- GitHub: https://github.com/innadarnel
 
-Frontend:
-- neyankiess@gmail.com
-- anastashap03@gmail.com
+Лозенко Владислав
+- Роль: Бекенд
+- email: 
+- LinkendIn: 
+- GitHub: https://github.com/scr1ll-1111
 
-Backend:
-- sstarodubtsev79@gmail.com
-- 
+Стародубцев Станіслав:
+- Роль: Бекенд, Менеджер, Тестувальник
+- email: sstarodubtsev79
+- LinkendIn: www.linkedin.com/in/stanislav-starodubtsev-535074370
+- GitHub: https://github.com/StanislavStarodubtsev
+- Djinii: https://djinni.co/q/b8692b28be/
 
-PM:
-- sstarodubtsev79@gmail.com
-
-QA:
-- sstarodubtsev79@gmail.com
+Анастасія Шаповал
+- Роль: Девопс, Фронтенд
+- email: anastashap03@gmail.com
+- LinkendIn: https://www.linkedin.com/in/anastasia-shapoval-957984361
+- GitHub: https://github.com/LianShap
+- Djinii: 
