--- a/README
+++ b/README
@@ -70,7 +70,7 @@ Backend:
 - email: anastashap03@gmail.com
 - LinkendIn: https://www.linkedin.com/in/anastasia-shapoval-957984361
 - GitHub: https://github.com/LianShap
-- Djinii: 
+- Djinii: https://djinni.co/q/1dee826ea3/
 
 
 
@@ -143,4 +143,4 @@ Shapoval Anastasia
 - email: anastashap03@gmail.com
 - LinkendIn: https://www.linkedin.com/in/anastasia-shapoval-957984361
 - GitHub: https://github.com/LianShap
-- Djinii: 
+- Djinii: https://djinni.co/q/1dee826ea3/
