--- a/README
+++ b/README
@@ -127,8 +127,7 @@ Inna Darnel
 
 Vladyslav Lozenko
 - Role: Backend
-- email: 
-- LinkendIn: 
+- email: vladyslavlozenko2005@gmail.com
 - GitHub: https://github.com/scr1ll-1111
 
 Stanislav Starodubtsev
