--- a/README
+++ b/README
@@ -131,8 +131,8 @@ Vladyslav Lozenko
 - GitHub: https://github.com/scr1ll-1111
 
 Stanislav Starodubtsev
-- Role: Backend, Manager, Tester
-- email: sstarodubtsev79
+- Role: Backend, PM, QA
+- email: sstarodubtsev79@gmail.com
 - LinkendIn: www.linkedin.com/in/stanislav-starodubtsev-535074370
 - GitHub: https://github.com/StanislavStarodubtsev
 - Djinii: https://djinni.co/q/b8692b28be/
