--- a/README
+++ b/README
@@ -43,7 +43,6 @@ Backend:
 Буришева Яна
 - Роль: Фронтенд
 - email: neyankiess@gmail.com
-- LinkendIn:
 - GitHub: https://github.com/nerolli
 
 Інна Дарнель
@@ -54,13 +53,12 @@ Backend:
 
 Лозенко Владислав
 - Роль: Бекенд
-- email: 
-- LinkendIn: 
+- email: vladyslavlozenko2005@gmail.com
 - GitHub: https://github.com/scr1ll-1111
 
 Стародубцев Станіслав:
 - Роль: Бекенд, Менеджер, Тестувальник
-- email: sstarodubtsev79
+- email: sstarodubtsev79@gmail.com
 - LinkendIn: www.linkedin.com/in/stanislav-starodubtsev-535074370
 - GitHub: https://github.com/StanislavStarodubtsev
 - Djinii: https://djinni.co/q/b8692b28be/
@@ -116,7 +114,6 @@ Backend:
 Yana Burysheva
 - Role: Frontend
 - email: neyankiess@gmail.com
-- LinkendIn:
 - GitHub: https://github.com/nerolli
 
 Inna Darnel
